MyDevOrg/src/objects/Component__c.object
<CustomObject>
    <description>Component that are created for the user stories are stored in this object</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component_API_Name__c</fullName>
        <description>API Name of the component</description>
        <label>Component API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <externalId>true</externalId>
        <label>Component Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <description>Type of the component that is built for the user story/requirement</description>
        <label>Component Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deoloyment_Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deployment Package</label>
        <referenceTo>Deployment_Package__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Change Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eclipse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_item__c</fullName>
        <description>master detail from do item</description>
        <label>Do item</label>
        <referenceTo>Developer_task__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test – Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test – Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Component ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>